@@ -54,7 +54,7 @@ void ext3::Set_Used_Sectors( Partition & partition )
 	Sector free_blocks = -1, blocksize = -1 ;
 
         //get free blocks..
-	f = popen( ( "dumpe2fs -h " + partition .partition ) .c_str( ), "r" ) ;
+	f = popen( ( "LANG=C dumpe2fs -h " + partition .partition ) .c_str( ), "r" ) ;
 	while ( fgets( c_buf, 512, f ) )
 	{
 		output = Glib::locale_to_utf8( c_buf ) ;
