@@ -1,5 +1,12 @@
 2004-12-09 Bart Hakvoort  <gparted@users.sf.net>
 
+	* src/ext2.cc,
+	  src/ext3.cc,
+	  src/ntfs.cc,
+	  src/reiserfs.cc: added LANG=C to the commands which read the used space of a filesystem. This prevent errors with some locales.
+
+2004-12-09 Bart Hakvoort  <gparted@users.sf.net>
+
 	* added MIN and MAX to filesystemstruct to set min. and max sizes of a filesystem. So instead of checking per filesystem
 	  i now simply check the fs.MIN or fs.MAX. this results in less and cleaner code. Also this will come in handy when adding
 	  support for new filesystems. (This also fixed several minor bugs with filesystemsizes and gained some improvement in resizer
